--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "sales-purchase-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev src/index.ts"
   },
   "keywords": [],
   "author": "",
